--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module CPAN::Mini::Visit::Simple
 
+0.03 Fri Mar  5 18:48:27 EST 2010
+    - 0.02 was uploaded to CPAN but failed automated testing;
+      begin to fix
+
 0.02 Sat Feb 27 10:56:08 EST 2010
     - First version with a working visitation method
 
